Bg colours for body, blue landing bg

--- a/P2/pages/contact.html
+++ b/P2/pages/contact.html
@@ -96,7 +96,7 @@
             <div>
                 <form class="contact-form">
                     <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                    <input type="submit" value="Submit" id="contact-submit">
+                    <input type="submit" value="Subscribe" id="contact-submit">
                 </form>
             </div>
         </div>
