--- a/P2/pages/hydraulic-ramp.html
+++ b/P2/pages/hydraulic-ramp.html
@@ -40,7 +40,7 @@
             <div class="wrap-content">
                 <div class="article">
                     <p class="article-date">September 2020</p>
-                    <div class="font-large article-body">
+                    <div class="font-medium article-body">
                         <p>With coal being phased out by governments due to pollution and diesel being used less in
                             comparison to natural gas or oil, it is time to investigate the alternatives for water
                             pumps. Diesel fuel powered pumps are popular and reliable for several simple water pumping
@@ -81,6 +81,9 @@
                         </p>
 
                         <img src="../img/hydraulic-body.jpg" alt="two people inspecting a device">
+                        <p class="caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam voluptatum,
+                            commodi neque vero mollitia expedita sapiente nesciunt, aliquam amet officiis laudantium
+                            tempora. Alias architecto quisquam a excepturi aspernatur hic natus!</caption>
 
                         <p>After consultation between the students and the mentors of SEEDA, a new plan and project
                             scope were sought out. The students were requested to design a Hydraulic Ram Pump Site
@@ -158,7 +161,7 @@
             <div>
                 <form class="contact-form">
                     <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                    <input type="submit" value="Submit" id="contact-submit">
+                    <input type="submit" value="Subscribe" id="contact-submit">
                 </form>
             </div>
         </div>
