--- a/P2/index.html
+++ b/P2/index.html
@@ -28,8 +28,36 @@
     </header>
 
 
-    <main>
-        <div class="wrap-content">
+
+    <div class="landing">
+        <div>
+            <div class="wrap-content">
+                <h1>Our experienced professionals assist you to execute <em>successful</em> projects</h1>
+                <h2 class="subheading">We believe our team can bring a new perspective to design and operations that
+                    will
+                    reduce
+                    the environmental footprint of any project.</h2>
+                <a class="button-nav" href="#">Contact us &nbsp &nbsp ➞</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="wrap-content brands">
+        <img src="./img/p1.jpg" alt="">
+        <img src="./img/p2.jpg" alt="">
+        <img src="./img/p3.jpg" alt="">
+        <img src="./img/p4.jpg" alt="">
+        <img src="./img/p5.jpg" alt="">
+        <img src="./img/p6.jpg" alt="">
+        <img src="./img/p7.jpg" alt="">
+        <img src="./img/p8.jpg" alt="">
+    </div>
+
+
+
+
+
+        <!-- <div class="wrap-content">
             <h1>Our experienced professionals assist you to execute <em>successful</em> projects</h1>
             <h2 class="subheading">We believe our team can bring a new perspective to design and operations that will
                 reduce
@@ -47,30 +75,35 @@
                 <img src="./img/p7.jpg" alt="">
                 <img src="./img/p8.jpg" alt="">
             </div>
-        </div>
+        </div> -->
 
-        <section>
+
+        <section class="bg-gray">
             <div class="wrap-content">
                 <div>
                     <h2>Engineering consulting and technical services</h2>
 
                     <div class="two-column">
                         <div class="font-large">
-                            <p class="font-large">
+                            <p>
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consectetur facilis rerum
                                 saepe
-                                porro maxime placeat consequuntur quo cumque nisi, quae distinctio odit illo officiis
+                                porro maxime placeat consequuntur quo cumque nisquae.
+                            </p>
+
+                            <p>
+                                distinctio odit illo officiis
                                 iusto
                                 quisquam repudiandae, veritatis atque tempore. Recusandae sit cum nihil nam ducimus
                                 similique
                                 dicta doloremque?
                             </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste repudiandae consequatur
-                                provident, eum quis, blanditiis veniam sint minima molestias numquam cupiditate! Non
-                                illum doloribus facere? Cum facilis cupiditate mollitia minus! Lorem ipsum dolor sit
-                                amet consectetur adipisicing elit. Laboriosam.</p>
+                            <p>Fusce sed ipsum rutrum tellus rhoncus congue. Duis euismod enim in orci sodales
+                                venenatis. Curabitur placerat scelerisque aliquet. Proin ac ante at est maximus
+                                tincidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore
+                                illum sit libero soluta nulla doloremque velit corporis iusto nam.</p>
                         </div>
-                        <img class="image-small" src="./img/perspective.jpg" alt="">
+                        <img class="image-medium" src="./img/perspective.jpg" alt="people looking at a monitor">
                     </div>
 
 
@@ -122,9 +155,9 @@
 
         </section>
 
-        <section>
+        <section class="bg-black-gray">
             <div class="wrap-content">
-                <h2>We assist you in the delivering sustainable projects</h2>
+                <h2>We assist you in the delivering of sustainable projects</h2>
                 <div class="two-column font-large cards">
                     <div>
 
@@ -165,10 +198,9 @@
                     </div>
                 </div>
 
-
-                <div class="bg-gray large-card">
-                    <div class="text-black">
-                        <h3>View our recent works</h3>
+                <div class=" bg-dark-gray large-card">
+                    <div class="text-white">
+                        <h3>View all our works</h3>
                         <p>Tincidunt augue interdum velit euismod in pellentesque massa. Augue neque gravida in
                             fermentum.
                             Suspendisse potenti nullam ac tortor vitae purus faucibus. Id venenatis a condimentum
@@ -181,13 +213,12 @@
                             interdum velit laoreet. Tellus at urna condimentum mattis pellentesque. Mauris cursus
                             mattis
                             molestie a iaculis at erat pellentesque adipiscing.</p>
-
-                        <a href="#">Recent projects ></a>
+    
+                        <a href="#">Look at our portfolio ></a>
                     </div>
                     <img src="./img/large-card.jpeg" alt="project site">
                 </div>
 
-            </div>
             </div>
 
         </section>
@@ -223,30 +254,34 @@
                     </div>
                 </div>
             </div>
-        </section>
 
-        <div class="wrap-content">
-            <div class="bg-dark-gray large-card team">
-                <div class="text-white">
-                    <h3>Our team</h3>
-                    <p>Netus et malesuada fames ac turpis egestas sed tempus. Etiam tempor orci eu lobortis
-                        elementum
-                        nibh tellus molestie. Enim lobortis scelerisque fermentum dui faucibus.</p>
-                    <a class="button-nav" href="#">Meet our team ➞</a>
-                </div>
-                <div class="members">
-                    <img src="./img/max.jpg" alt="">
-                    <img src="./img/dioni.jpg" alt="">
-                    <img src="./img/dima.jpg" alt="">
-                    <img src="./img/masha.jpg" alt="">
-                    <div>
+            <div class="wrap-content">
+                <div class="bg-dark-gray large-card team">
+                    <div class="text-white">
+                        <h3>Our team</h3>
+                        <p>Netus et malesuada fames ac turpis egestas sed tempus. Etiam tempor orci eu lobortis
+                            elementum
+                            nibh tellus molestie. Enim lobortis scelerisque fermentum dui faucibus.</p>
+                        <a class="button-nav" href="#">Meet our team ➞</a>
+                    </div>
+                    <div class="members">
+                        <img src="./img/max.jpg" alt="">
+                        <img src="./img/dioni.jpg" alt="">
+                        <img src="./img/dima.jpg" alt="">
+                        <img src="./img/masha.jpg" alt="">
+                        <div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+
+        </section>
+
+   
+
+     
 
 
-    </main>
 
     <div class="footer-contact">
         <div class="wrap-content contact-wrapper">
@@ -254,7 +289,7 @@
             <div>
                 <form class="contact-form">
                     <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                    <input type="submit" value="Submit" id="contact-submit">
+                    <input type="submit" value="Subscribe" id="contact-submit">
                 </form>
             </div>
         </div>
